# IronCache

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.console  GOVERNANCE.md  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  deny.toml  rust-toolchain.toml
.config/: nextest.toml
crates/ironcache/: Cargo.toml  build.rs
crates/ironcache-bench/: Cargo.toml
crates/ironcache-bench/benches/: codec.rs  dashindex.rs  store.rs
crates/ironcache-bench/src/: client.rs  closed_loop.rs  lib.rs  open_loop.rs  report.rs  testutil.rs  workload.rs
crates/ironcache-cluster/: Cargo.toml
crates/ironcache-cluster/src/: lib.rs
crates/ironcache-clusterbus/: Cargo.toml
crates/ironcache-clusterbus/src/: lib.rs  security.rs
crates/ironcache-config/: Cargo.toml
crates/ironcache-config/src/: lib.rs  notify.rs  persist_cpu.rs  registry.rs  runtime.rs  sha256.rs
crates/ironcache-config/tests/: ignore_unknown_config_keys_env.rs  unknown_env_var.rs
crates/ironcache-console/: Cargo.toml  SECURITY.md  build.rs
crates/ironcache-console/src/: api.rs  assets.rs  auth.rs  cli.rs  cluster.rs  config.rs  history.rs  history_embedded.rs  http.rs  httpclient.rs  info.rs  lib.rs  logging.rs  main.rs  manage.rs  metrics.rs  node.rs  poll.rs  resp.rs  snapshot.rs
crates/ironcache-console/tests/: http_endpoints.rs
crates/ironcache-console/ui/: app.css  app.js  index.html
crates/ironcache-dashtable/: Cargo.toml
crates/ironcache-dashtable/src/: index.rs  lib.rs
crates/ironcache-dashtable/tests/: dashindex_oracle.rs
crates/ironcache-env/: Cargo.toml
crates/ironcache-env/src/: lib.rs
crates/ironcache-eviction/: Cargo.toml
crates/ironcache-eviction/src/: lib.rs  random.rs  s3fifo.rs  wtinylfu.rs
crates/ironcache-expiry/: Cargo.toml
crates/ironcache-expiry/src/: lib.rs
crates/ironcache-observe/: Cargo.toml  build.rs
crates/ironcache-observe/src/: hotkeys.rs  lib.rs  ops.rs
crates/ironcache-persist/: Cargo.toml
crates/ironcache-persist/src/: delta.rs  format.rs  lib.rs
crates/ironcache-protocol/: Cargo.toml
crates/ironcache-protocol/src/: decode.rs  encode.rs  error.rs  lib.rs  slot.rs  value.rs
crates/ironcache-protocol/tests/: proptest_codec.rs
crates/ironcache-raft/: Cargo.toml
crates/ironcache-raft-net/: Cargo.toml
crates/ironcache-raft-net/src/: codec.rs  config_sm.rs  lib.rs  raft_handle.rs  storage.rs
crates/ironcache-raft-net/tests/: loopback_cluster.rs  tls_cluster.rs
crates/ironcache-raft/src/: lib.rs  lib_tests.rs  raft_config.rs  raft_effects.rs  raft_sm.rs  raft_storage.rs  raft_types.rs
crates/ironcache-repl/: Cargo.toml
crates/ironcache-repl/src/: cursor.rs  disk_backlog.rs  frames.rs  fullsync.rs  kvcodec.rs  lag.rs  lib.rs  link.rs  observer.rs  stream.rs  transport.rs  upgrade_plan.rs
crates/ironcache-repl/tests/: convergence.rs  disk_backlog_loopback.rs  dst_link.rs  fullsync_loopback.rs  loopback.rs  stream_loopback.rs
crates/ironcache-runtime/: Cargo.toml
crates/ironcache-runtime/src/: affinity.rs  bootstrap.rs  buffer_pool.rs  fixed_datapath.rs  io_uring_raw_rt.rs  io_uring_rt.rs  lib.rs  listen_fds.rs  pace.rs  tls.rs  tokio_rt.rs  uring_probe.rs
crates/ironcache-runtime/tests/: prime_listen_fds_unsets_env.rs  shard_owner_socket_activation.rs
crates/ironcache-server/: Cargo.toml
crates/ironcache-server/src/: admission.rs  cmd_acl.rs  cmd_bitmap.rs  cmd_block.rs  cmd_cluster.rs  cmd_config.rs  cmd_dump.rs  cmd_expire.rs  cmd_hash.rs  cmd_hll.rs  cmd_introspect.rs  cmd_keyspace.rs  cmd_list.rs  cmd_set.rs  cmd_sort.rs  cmd_string.rs  cmd_txn.rs  cmd_util.rs  cmd_zset.rs  command_spec.rs  conn.rs  dispatch.rs  dispatch_acl.rs  dispatch_conn_cmd.rs  dispatch_introspect.rs  dispatch_tests.rs  dispatch_txn.rs  glob.rs  lib.rs  notify.rs  rdb.rs  route.rs
crates/ironcache-server/tests/: config.rs  end_to_end.rs  layering.rs
crates/ironcache-sim/: Cargo.toml
crates/ironcache-sim/src/: lib.rs
crates/ironcache-storage/: Cargo.toml
crates/ironcache-storage/src/: lib.rs
crates/ironcache-store/: Cargo.toml
crates/ironcache-store/benches/: cow_arc.rs
crates/ironcache-store/src/: encoding.rs  kvobj.rs  lib.rs
crates/ironcache-store/tests/: accounting.rs  eviction.rs  hash_inplace.rs  index_growth.rs  keyspace.rs  list_inplace.rs  passive_replica_expiry.rs  primitives.rs  set_inplace.rs  snapshot_iter.rs  watch.rs  write_observer.rs  zset_inplace.rs
crates/ironcache/examples/: expiry.rs  forced_panic.rs  hello_world.rs  pipeline.rs  pubsub.rs  transactions.rs
crates/ironcache/src/: affinity.rs  blocking.rs  cli.rs  cluster_bus.rs  cluster_upgrade.rs  cluster_upgrade_driver.rs  cluster_upgrade_inventory.rs  coordinator.rs  fd_budget.rs  handoff.rs  lib.rs  main.rs  metrics_http.rs  multikey.rs  panic_hook.rs  persist.rs  pubsub.rs  raft_boot.rs  replica_attach.rs  resharding.rs  serve.rs  serve_admin_cmd.rs  serve_classify.rs  serve_cluster_cmd.rs  serve_conn_loop.rs  serve_home_dispatch.rs  serve_hooks.rs  serve_hop.rs  serve_pubsub_cmd.rs  serve_routing.rs  serve_shard_state.rs  serve_signal.rs  serve_tests.rs  serve_txn_block.rs  serve_util.rs  sockact_log.rs  spanning_combine.rs  spanning_move.rs  test_support.rs  topology.rs  (+2 more)
crates/ironcache/tests/: acl.rs  auth_gate.rs  blocking.rs  client_pause.rs  client_tracking.rs  cluster_countkeysinslot.rs  cluster_slice2.rs  cluster_upgrade_live.rs  commandstats.rs  compat_commands.rs  conn_limits.rs  console_acl.rs  coordinator_spanning_move.rs  coordinator_stage1.rs  coordinator_stage2.rs  coordinator_stage2b.rs  coordinator_txn.rs  cross_shard_pipeline.rs  debug_subset.rs  differential.rs  get_by_ref.rs  ha_transport.rs  hotkeys.rs  hugepages.rs  info_completeness.rs  info_node_wide.rs  keyspace_notifications.rs  metrics_endpoint.rs  migration_xshard_presence.rs  persistence.rs  pubsub.rs  raft_cluster.rs  shard_owners_mode.rs  shutdown.rs  tls.rs  tls_reload.rs  turnkey_cluster.rs  turnkey_restart_no_clobber.rs  upgrade_handoff.rs  (+3 more)
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode.rs
(+335 files in other folders)
