# SPDX-License-Identifier: MIT OR Apache-2.0
#
# IronCache Cargo virtual workspace. The crate graph mirrors the design seams:
# ironcache-env (determinism seam, ADR-0003), ironcache-protocol (RESP codec and
# error catalog, PROTOCOL.md/ERRORS.md), ironcache-runtime (the swappable Runtime
# trait, RUNTIME_ABSTRACTION.md over the shared-nothing ADR-0002), ironcache-config
# (layered TOML config, CONFIG.md), ironcache-observe (INFO/metrics scaffold,
# OBSERVABILITY.md), ironcache-server (dispatch and Tier-0 connection state machine,
# COMMANDS.md/CONNECTION_LIFECYCLE.md), and the ironcache binary (CLI_BINARY.md,
# ADR-0020). PR-1 scope: boot plus wire, Tier-0 commands only. PR-3a adds
# ironcache-eviction (the pluggable EvictionPolicy: S3-FIFO/Random/NoEviction,
# EVICTION.md/ADR-0008) plus the memory ceiling and denyoom admission.

[workspace]
resolver = "2"
members = [
    "crates/ironcache-env",
    "crates/ironcache-protocol",
    "crates/ironcache-runtime",
    "crates/ironcache-config",
    "crates/ironcache-cluster",
    "crates/ironcache-clusterbus",
    "crates/ironcache-sim",
    "crates/ironcache-raft",
    "crates/ironcache-raft-net",
    "crates/ironcache-repl",
    "crates/ironcache-observe",
    "crates/ironcache-storage",
    "crates/ironcache-dashtable",
    "crates/ironcache-eviction",
    "crates/ironcache-expiry",
    "crates/ironcache-store",
    "crates/ironcache-persist",
    "crates/ironcache-server",
    "crates/ironcache",
    "crates/ironcache-bench",
    "crates/ironcache-console",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ELares/IronCache"
authors = ["Zeke <ezequiel.lares@outlook.com>"]

# Pedantic-by-default lints, inherited by every member crate via
# `[lints] workspace = true`. Specific pedantic lints are relaxed below with a
# justification; the set is deliberately not a blanket allow.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# The codec and dispatch surfaces are inherently large match arms and conversions;
# these named relaxations keep the signal high without blanket-allowing pedantic.
module_name_repetitions = "allow"   # ironcache-* crate names repeat in type names by design.
missing_errors_doc = "allow"        # Errors are typed enums documented at the type, not per fn.
missing_panics_doc = "allow"        # PR-1 internal invariants; panics are asserted, not API contract.
must_use_candidate = "allow"        # Noisy on small value-returning helpers.
cast_possible_truncation = "allow"  # RESP lengths are bounded by the hardening caps (#138).
cast_sign_loss = "allow"            # Same: bounded, checked at parse sites.
cast_precision_loss = "allow"       # Deliberate in RNG f64 derivation and size math; bounded.
cast_possible_wrap = "allow"        # u64 ids/lengths -> i64 RESP integers are within range here.
cast_lossless = "allow"             # Prefer explicit `as` in numeric-formatting hot paths.
doc_markdown = "allow"              # Doc prose cites spec filenames (RUNTIME.md) and proper nouns unquoted.

[workspace.dependencies]
# Buffers and byte handling for the zero-copy-leaning codec (PROTOCOL.md).
bytes = "1.11"
# Async runtime. Used in current-thread mode only; the multi-thread work-stealing
# scheduler is rejected by ADR-0002 (shared-nothing). See ironcache-runtime.
tokio = { version = "1.47", default-features = false }
# CLI dispatch, ADR-0020 clap subcommands. Only `derive` is used (no `env`/`string`
# features are exercised by the CLI surface); add them back if a future flag needs
# env-var fallback or runtime-built strings.
clap = { version = "4.5", features = ["derive"] }
# Config and serde stack (CONFIG.md).
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
# JSON serialization for the console REST API (#358). PURE RUST (no C lib), so the
# musl/aarch64 static cross-build is unaffected, and MIT OR Apache-2.0 (already on
# the deny.toml license allowlist). Used ONLY by the console crate to render the
# `/api/*` response bodies; the engine data plane does not depend on it.
serde_json = "1.0"
# Typed errors (no stringly-typed errors per ERRORS.md internal-mapping rule).
thiserror = "2.0"
anyhow = "1.0"
# Allocator, ADR-0006. Pinned to the 5.3.x jemalloc series the ADR specifies; the
# stats (and profiling) features are enabled so the PR-3 mallctl accounting path
# (epoch + stats.allocated) compiles in.
tikv-jemallocator = { version = "0.6", features = ["background_threads", "stats", "profiling"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
# SO_REUSEPORT and keepalive socket options (RUNTIME.md per-shard accept).
socket2 = { version = "0.6", features = ["all"] }
# Embedded transport TLS (#105, docs/design/TLS.md). PURE-RUST: tokio-rustls drives the
# handshake over a tokio stream, rustls is the TLS engine, and the `ring` crypto provider is
# pinned (NOT the aws-lc-rs default, which needs cmake + a C toolchain) so the musl/aarch64
# static cross-build stays reproducible with no system OpenSSL / C TLS library (ADR-0017,
# docs/design/TLS.md "Cryptographic backend and the static-binary trade"). default-features =
# false keeps the provider EXPLICIT. tls12 is enabled so the version floor is TLS 1.2+1.3
# (rustls excludes SSLv3/TLS1.0/TLS1.1 by construction). The cert chain + PKCS#8/RSA/SEC1 private
# key are parsed from the configured PEM via rustls-pki-types' own `PemObject` trait (the
# MAINTAINED replacement for the now-archived rustls-pemfile, RUSTSEC-2025-0134; pki-types is
# already in the tree transitively via rustls, so this adds no new crate). These live in
# ironcache-runtime (the sanctioned I/O seam): the determinism grep-lint excludes that crate, and
# rustls' own handshake RNG (ring -> getrandom) is TRANSPORT entropy, not the DST-verified
# engine's clock/RNG (ADR-0003), so it does not cross the determinism boundary.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types = { version = "1.12", features = ["std"] }
# The OPT-IN Linux io_uring backend (PROD-10 / #28, docs/design/IOURING_DATAPATH.md), behind the
# default-OFF `io_uring` feature in ironcache-runtime and target-gated to Linux there. PURE-RUST: it
# pulls `io-uring` (raw syscall bindings, NO liburing / C library), so it does not disturb the
# static-musl default build (the feature is off by default and never enters the default artifact). It
# gives ONE current-thread io_uring runtime per thread + an owned-buffer TcpStream, matching the
# shared-nothing thread-per-core model (ADR-0002) and the owned-buffer Runtime seam
# (RUNTIME_ABSTRACTION.md). Its license tree is MIT (cargo-deny clean: io-uring/libc/slab/socket2/
# futures-util/tokio, all already in or compatible with the workspace allowlist).
tokio-uring = { version = "0.5", features = ["bytes"] }
# The raw pure-Rust io_uring syscall bindings (ALREADY pulled transitively by tokio-uring, same
# 0.6 line). Declared DIRECTLY + optional so the io_uring backend can run the STARTUP CAPABILITY
# PROBE (IOURING_DATAPATH.md "chosen by startup probe"): create a ring, `register_probe`, and read
# which opcodes (multishot recv/accept, provided buffers, fixed-buffer read) the RUNNING kernel
# supports, so one Linux artifact selects the fastest datapath the kernel offers. Linux + opt-in
# only (same license tree as tokio-uring, already cargo-deny clean).
io-uring = { version = "0.6", default-features = false }
# The per-shard SwissTable for the store index (ADR-0005, HASHTABLE.md #35). Stock
# hashbrown, unsynchronized, owned by one core; MIT OR Apache-2.0 (cargo-deny clean).
hashbrown = "0.16"
# Fast CRLF scanning in the RESP line decoder.
memchr = "2.7"
# Shortest round-trip f64 digits, post-processed into Redis/fpconv spelling.
ryu = "1.0"
# Signal handling in the binary only (graceful shutdown, CLI_BINARY.md).
libc = "0.2"
# Structured logging (OBSERVABILITY.md, #152). PURE RUST (no C lib), so the musl/aarch64 static
# cross-build is unaffected. `tracing` is the facade the operational logs emit through; the binary
# installs ONE `tracing-subscriber` fmt layer at boot, filtered by `--log-level` via the
# `EnvFilter`-free `LevelFilter` reload-free path (we build a plain `Targets`/`LevelFilter` from the
# flag). `default-features = false` keeps the dependency surface minimal: only the `fmt` writer +
# the `std` env it needs, no ANSI/registry-extras pulled unless named. The stderr writer keeps logs
# on the orchestrator-friendly stream. A level check short-circuits BEFORE argument formatting, so a
# suppressed `debug!`/`trace!` on the hot path costs only an atomic level load (no allocation).
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }
# In-memory secret zeroization (#145, docs/design/SECRETS.md, THREAT_MODEL.md "Process memory"
# row). The RustCrypto `zeroize` crate's `Zeroizing<T>` wrapper scrubs a buffer on drop via a
# volatile write the optimizer may not elide, a defense-in-depth so a core dump / memory
# disclosure does not trivially yield a plaintext secret. PURE RUST, no C lib, MIT OR Apache-2.0
# (already on the deny.toml license allowlist), and ALREADY in the lock transitively via rustls /
# rustls-pki-types (no new crate enters the graph). Used ONLY off the hot path: the long-lived
# `cluster_secret` and the transient `CONFIG SET requirepass` plaintext copy. `default-features =
# false` drops the optional `derive` macro we do not use, keeping the surface minimal.
zeroize = { version = "1.9", default-features = false }

# Internal crates.
ironcache-env = { path = "crates/ironcache-env" }
ironcache-protocol = { path = "crates/ironcache-protocol" }
ironcache-runtime = { path = "crates/ironcache-runtime" }
ironcache-config = { path = "crates/ironcache-config" }
ironcache-cluster = { path = "crates/ironcache-cluster" }
ironcache-clusterbus = { path = "crates/ironcache-clusterbus" }
ironcache-sim = { path = "crates/ironcache-sim" }
ironcache-raft = { path = "crates/ironcache-raft" }
ironcache-raft-net = { path = "crates/ironcache-raft-net" }
ironcache-repl = { path = "crates/ironcache-repl" }
ironcache-observe = { path = "crates/ironcache-observe" }
ironcache-storage = { path = "crates/ironcache-storage" }
ironcache-eviction = { path = "crates/ironcache-eviction" }
ironcache-expiry = { path = "crates/ironcache-expiry" }
ironcache-store = { path = "crates/ironcache-store" }
ironcache-persist = { path = "crates/ironcache-persist" }
ironcache-server = { path = "crates/ironcache-server" }

[profile.release]
# Reproducible-build and size posture for the single static binary (CLI_BINARY.md,
# ADR-0017). LTO and a single codegen unit; panic=abort keeps the musl binary lean.
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
