# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-clusterbus"
description = "Inter-node transport (HA-1): an outbound RESP peer connection over the Runtime seam, the substrate the cluster control plane, replication, and migration links build on."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ironcache-runtime = { workspace = true }
# H1: peer-address resolution runs on tokio's BLOCKING pool via `tokio::net::lookup_host` so a
# synchronous `getaddrinfo` never stalls the single-threaded raft control-plane / shard executor
# (was `std::net::ToSocketAddrs::to_socket_addrs`, an inline blocking call = consensus freeze on a
# DNS outage). Only the `net` feature is needed (the lookup); the timeout bound is read through the
# Runtime timer seam, not tokio::time directly.
tokio = { workspace = true, features = ["net"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync"] }
