# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-config"
description = "Layered configuration (defaults -> TOML -> env -> CLI flags) with human-size parsing (CONFIG.md)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
