# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-config"
description = "Layered configuration (defaults -> TOML -> env -> CLI flags) with human-size parsing (CONFIG.md)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
# The storage waist owns ScanCursor::MAX_SHARDS (the composite cross-shard SCAN cursor's
# shard-index field width), so the shard-count ceiling lives in ONE place and Config
# validation rejects an over-count at boot rather than silently corrupting the cursor
# (COORDINATOR.md #107, FIX 2). storage is the leaf waist (only `bytes`), so this is not
# a dependency cycle and pulls in no extra third-party crates.
ironcache-storage = { workspace = true }
