# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-config"
description = "Layered configuration (defaults -> TOML -> env -> CLI flags) with human-size parsing (CONFIG.md)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
# Boot-time config warnings (an unknown IRONCACHE_* env var) emit through the tracing facade, like
# the rest of the boot path, so they land in the operator's log without the config crate owning a
# subscriber. The binary installs the one subscriber (OBSERVABILITY.md, #152).
tracing = { workspace = true }
# The storage waist owns ScanCursor::MAX_SHARDS (the composite cross-shard SCAN cursor's
# shard-index field width), so the shard-count ceiling lives in ONE place and Config
# validation rejects an over-count at boot rather than silently corrupting the cursor
# (COORDINATOR.md #107, FIX 2). storage is the leaf waist (only `bytes`), so this is not
# a dependency cycle and pulls in no extra third-party crates.
ironcache-storage = { workspace = true }
# The slot-map crate owns topology validation (gap/overlap/dup-id/self-present/bad-range),
# so Config::validate delegates to it: ONE validator the router, projection, and config all
# share (no second copy of the slot-assignment rules). It is a leaf (only ironcache-protocol),
# so this is not a cycle: config -> cluster -> protocol (CLUSTER_CONTRACT.md #70, slice 2).
ironcache-cluster = { workspace = true }
