# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-console"
description = "IronCache Console: a separate server that discovers an IronCache deployment, aggregates a cluster-wide view, and serves a monitoring dashboard. Stays out of the data path."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "ironcache-console"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "macros",
    "sync",
    "signal",
] }
ironcache-env = { workspace = true }
