# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-dashtable"
description = "Standalone Dash-style extendible-hashing table (directory + segments + split/doubling + fingerprint probe + cache-mode segment-local eviction), the #285 stage 1+2 algorithm core. Not yet wired into the store."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]

[dev-dependencies]
# The ORACLE for the DashIndex parity suite (tests/dashindex_oracle.rs): the exact table
# type + explicit-hash API the store uses today. A dev-dependency only -- the shipped
# crate stays dependency-free.
hashbrown = { workspace = true }
# Seeded SplitMix64 for the deterministic oracle op stream (ADR-0003: no rand, no time).
ironcache-env = { workspace = true }
