# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-env"
description = "Determinism seam (ADR-0003): the only crate that may touch real time and OS entropy, behind the Env/Clock/Rng traits."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]

[dev-dependencies]
