# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-eviction"
description = "Pluggable eviction policies behind the EvictionPolicy trait: S3-FIFO (default), Random, NoEviction, plus the Redis maxmemory-policy name mapping (EVICTION.md #48/#50, ADR-0007/0008)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The frozen storage waist: this crate implements the reserved EvictionHook and
# extends it with EvictionPolicy. No concrete map/kvobj type crosses this edge.
ironcache-storage = { workspace = true }
# The determinism seam (ADR-0003): the Random policy draws its victim through the
# Env Rng, never std rand. Held as a small seeded RNG snapshot the binary feeds in.
ironcache-env = { workspace = true }
