# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-observe"
description = "Minimal INFO/metrics scaffold: section-shaped INFO body and per-shard rollup counters (OBSERVABILITY.md)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ironcache-env = { workspace = true }
