# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-persist"
description = "Durable on-disk point-in-time snapshot persistence (#58/#62/#63): the per-shard forkless dump (reusing the HA-5b snapshot_chunk), the atomic crash-safe manifest, and the load-on-boot path. Default-off: when no data_dir is configured the boot + hot path are byte-unchanged."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The per-shard store: the forkless, memory-neutral SNAPSHOT iterator
# (`ShardStore::snapshot_chunk` + `SnapshotCursor`, HA-5b #60) the per-shard dump
# pulls each live key from, and `ShardStore::insert_object` the load-on-boot path
# replays each decoded `KvObj` through. A normal higher-level dep (persist sits
# ABOVE the store, the SAME direction repl/serve use); the store has no edge back.
ironcache-store = { workspace = true }
# The frozen storage waist: `UnixMillis` (the TTL / save-timestamp basis) and the
# data-type / encoding tags the on-disk record carries through the KvObj codec.
ironcache-storage = { workspace = true }
# The KvObj WIRE CODEC (`encode_kvobj` / `decode_kvobj`): the SAME hand-rolled,
# length-delimited, faithful (one-way-ratchet-preserving) encoding the HA-7b
# full-sync uses for a `KvObj` is reused VERBATIM as the on-disk record format, so
# the snapshot file and the replication stream share one audited codec.
ironcache-repl = { workspace = true }

[dev-dependencies]
# The determinism seam is not needed here (persist reads `now` as a passed-in
# `UnixMillis`, never a clock), so the tests construct `UnixMillis` directly.
